# crackpipe_public

./: .gitmodules  CMakeLists.txt  README.md
src/: Logger.cpp  Logger.h  dllmain.cpp  dllmain.h  exe.cpp  exe.h  injector.cpp  injector.h  keyauth_helpers.h  macros.h  util.cpp  util.h  veh_hooks.cpp  veh_hooks.h
src/korepi_injector/: korepi_injector.cpp  korepi_injector.h  main.cpp  manual_map.cpp  manual_map.h
